--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2215,7 +2215,7 @@ Usage (In Ghost editor):
     padding-top: 20px;
     padding-bottom: 60px;
     color: #fff;
-    background: color(var(--darkgrey) l(-15%));
+    background: #2D3239;
 }
 
 .site-footer-content {
