--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -113,7 +113,7 @@ body {
     padding-top: 12px;
     padding-bottom: 12px;
     color: #fff;
-    background: color(var(--darkgrey) l(-5%)) no-repeat center center;
+    background: #2D3239 no-repeat center center;
     background-size: cover;
 }
 
@@ -699,7 +699,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 .post-full-title {
     margin: 0;
-    color: color(var(--darkgrey) l(-5%));
+    color: #2D3239;
 }
 
 .date-divider {
@@ -826,7 +826,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 .post-full-content strong,
 .post-full-content em {
-    color: color(var(--darkgrey) l(-5%));
+    color: #2D3239;
 }
 
 .post-full-content small {
@@ -924,11 +924,11 @@ Usage (In Ghost editor):
     margin: 1.5em 0 3em;
     padding: 20px;
     max-width: 100%;
-    border: color(var(--darkgrey) l(-10%)) 1px solid;
+    border: #2D3239 1px solid;
     color: var(--whitegrey);
     font-size: 1.4rem;
     line-height: 1.5em;
-    background: color(var(--darkgrey) l(-3%));
+    background: #2D3239;
     border-radius: 5px;
 }
 
@@ -971,7 +971,7 @@ Usage (In Ghost editor):
 .post-full-content h4,
 .post-full-content h5,
 .post-full-content h6 {
-    color: color(var(--darkgrey) l(-5%));
+    color: #2D3239;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
@@ -1361,7 +1361,7 @@ Usage (In Ghost editor):
 
 .post-full-authors-content a {
     display: inline-block;
-    color: color(var(--darkgrey) l(+20%));
+    color: #2D3239;
     font-size: 1.4rem;
     font-weight: 600;
     text-transform: uppercase;
