--- a/default.hbs
+++ b/default.hbs
@@ -33,6 +33,7 @@
                     <a href="{{@blog.url}}">Latest Posts</a>
                     {{#if @blog.facebook}}<a href="{{facebook_url @blog.facebook}}" target="_blank" rel="noopener">Facebook</a>{{/if}}
                     {{#if @blog.twitter}}<a href="{{twitter_url @blog.twitter}}" target="_blank" rel="noopener">Twitter</a>{{/if}}
+                    <a href="http://eepurl.com/dHMECz" target="_blank" rel="noopener">Subscribe</a>
                 </nav>
             </div>
         </footer>
